--- a/miniProgram.html
+++ b/miniProgram.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-	<a href="./template/app.html?isHomePage=1&netType=wifi&query=#小程序://全民狙神/n3PWJUApljTZa0J&isOpenPreload=1&pRequestId=1624416301494&sessionId=11188811355750867065&fontRatio=1.0&parentSearchID=&type=0&subSessionId=73_3186109879_1624416301494&version=80008446&platform=android&scene=73&msgSvrId=5831590946835401850&lang=ko&fromTagSearch=1&wechatVersion=671089471">click</a>
+	<iframe src="./template/app.html?isHomePage=1&netType=wifi&query=#小程序://全民狙神/n3PWJUApljTZa0J&isOpenPreload=1&pRequestId=1624416301494&sessionId=11188811355750867065&fontRatio=1.0&parentSearchID=&type=0&subSessionId=73_3186109879_1624416301494&version=80008446&platform=android&scene=73&msgSvrId=5831590946835401850&lang=ko&fromTagSearch=1&wechatVersion=671089471"></iframe>
 
 	<a href="小程序://全民狙神/n3PWJUApljTZa0J">mini</a>
 
@@ -127,12 +127,15 @@
 				"__callback_id":"1026"	
 			});
 
-			for(var i=0; i<msg_array.length; i++) {
-				mylog('try' + i);
-				var msgArray = []; msgArray.push(msg_array[i]);
-				var msgArrayString = JSON.stringify(msgArray);
-				window.__wx._sendMessage(msgArrayString);
-			}			
+			setTimeout(()=> {
+				for(var i=0; i<msg_array.length; i++) {
+					mylog('try' + i);
+					var msgArray = []; msgArray.push(msg_array[i]);
+					var msgArrayString = JSON.stringify(msgArray);
+					window.__wx._sendMessage(msgArrayString);
+				}
+			},
+			3000);
 		}    	
   	});
   </script>
