--- a/6418.html
+++ b/6418.html
@@ -20,6 +20,6 @@ for (let i = 0; i < ITERATIONS; i++) {
     a = [0, 1, 2, 3, 4];
     if (isLastIteration)
         TRIGGER = true;
-    print(f(a, p));
+    document.write(f(a, p));
 }
 </script>
