--- a/6418_2.html
+++ b/6418_2.html
@@ -2,7 +2,7 @@
 	<body>
 			<script>
 				function assertTrue(c) {
-				     if (!c) { alert("Assertion failed"); }
+				     if (!c) { document.write("Assertion failed"); }
 				}
 
 				function assertFalse(c) {
