--- a/6418_2.html
+++ b/6418_2.html
@@ -3,6 +3,7 @@
 			<script>
 				function assertTrue(c) {
 				     if (!c) { document.write("Assertion failed"); }
+				     else document.write("Not vulnerable..");
 				}
 
 				function assertFalse(c) {
