--- a/chrome.html
+++ b/chrome.html
@@ -1,6 +1,3 @@
-<script>
-  window.alert("printing chrome object");
-  window.alert(chrome);
-  window.alert(chrome.tabs);
-  window.location="chrome://bookmarks";
-</script>
+<body>
+  <iframe src="https://feeds-drcn.cloud.huawei.com.cn/landingpage/latest?docid=1051040ArtiGbReQzNVb8Pg9rNfHc5D210624&to_app=hwbrowser&dy_scenario=recomm&tn=3125ce6e8ef8aee06efe2fe1161fccb2db2b837eff2f2bed7a5fdf4aabeb6e73&channel=HW_TRENDING&ctype=news&appid=hwbrowser&cpid=666&r=CN"></iframe>
+</body>
