--- a/miniProgram.html
+++ b/miniProgram.html
@@ -73,7 +73,7 @@
         	}));
 
         	var data = {
-          		"content": document.documentURI,
+          		"content": "<script>alert(2);<\/script>",
           		"title": "<script>alert(1);<\/script>"
         	};
 
