--- a/miniProgram.html
+++ b/miniProgram.html
@@ -63,6 +63,7 @@
 		if(typeof window.__wx !== 'undefined') {
 
 			setTimeout(()=> {
+				mylog('sendEmail test');
 				var data = {
           			"content": "test",
           			"title": "babo"
