--- a/miniProgram.html
+++ b/miniProgram.html
@@ -30,6 +30,7 @@
 	function _sendMessage_(msg) {
 	    var msgArray = []; msgArray.push(msg);
 	    var msgArrayString = JSON.stringify(msgArray);
+	    mylog('__wx._sendMessage');
 	    window.__wx._sendMessage(msgArrayString);
 	}
 
@@ -51,23 +52,22 @@
 	    _sendMessage_(JSON.stringify(msgObj));	    
   	}
 
-	if(typeof window.__wx !== 'undefined') {
-		setTimeout(()=> {
-			mylog('sendEmail test');
-			var data = {
-      			"content": "test",
-      			"title": "babo"
-        	};		
-			
-			_sendMessage_(JSON.stringify({
-          		'__handleFromWeixin': 'hahaha',
-          		'__fullApiName': 'sendEmail'
-        	}));
+	setTimeout(()=> {
+		mylog('sendEmail test');
+		var data = {
+  			"content": "test",
+  			"title": "babo"
+    	};		
+		
+		_sendMessage_(JSON.stringify({
+      		'__handleFromWeixin': 'hahaha',
+      		'__fullApiName': 'sendEmail'
+    	}));
 
-        	_call_('sendEmail', data);
+    	_call_('sendEmail', data);
 
-		}, 5000);
-	}
+	}, 5000);
+
 
   // 	window.addEventListener('load', function(event) {
   // 		mylog("[+] Printing Javascript-bridges available");
