--- a/miniProgram.html
+++ b/miniProgram.html
@@ -22,6 +22,7 @@
 		//}
 	</script>
 	<script>
+		/*
 	var _callback_count = 1000;
 	var _MESSAGE_TYPE = '__msg_type';
 	var _CALLBACK_ID = '__callback_id';
@@ -80,8 +81,9 @@
 
 		}, 5000);
   	//}
-
-  // 	window.addEventListener('load', function(event) {
+		*/
+   	window.addEventListener('load', function(event) {
+   		alert(_sendMessage);
   // 		mylog("[+] Printing Javascript-bridges available");
   // 		if(typeof window.WeixinJSBridge !== 'undefined') mylog('WeixinJSBridge');
   //   	if(typeof window.WeixinJSContext !== 'undefined') mylog('WeixinJSContext');
@@ -188,7 +190,7 @@
 		// 	}
 			
 		// }    	
-  // 	});
+   	});
   </script>
 </body>
 </html>
