--- a/miniProgram.html
+++ b/miniProgram.html
@@ -83,7 +83,9 @@
   	//}
 		*/
    	window.addEventListener('load', function(event) {
-   		alert(_sendMessage);
+   		document.write("load done");
+   		document.write(_sendMessage);
+   		document.write(_MESSAGE_TYPE);
   // 		mylog("[+] Printing Javascript-bridges available");
   // 		if(typeof window.WeixinJSBridge !== 'undefined') mylog('WeixinJSBridge');
   //   	if(typeof window.WeixinJSContext !== 'undefined') mylog('WeixinJSContext');
