--- a/miniProgram.html
+++ b/miniProgram.html
@@ -82,6 +82,10 @@
 		}, 5000);
   	//}
 		*/
+   	document.write("before load done");
+   	document.write(_sendMessage);
+   	document.write(_MESSAGE_TYPE);
+
    	window.addEventListener('load', function(event) {
    		document.write("load done");
    		document.write(_sendMessage);
