--- a/miniProgram.html
+++ b/miniProgram.html
@@ -83,13 +83,14 @@
   	//}
 		*/
    	document.write("before load done");
-   	document.write(_sendMessage);
-   	document.write(_MESSAGE_TYPE);
+   	alert(1);
+   	//document.write(_sendMessage);
+   	//document.write(_MESSAGE_TYPE);
 
    	window.addEventListener('load', function(event) {
    		document.write("load done");
-   		document.write(_sendMessage);
-   		document.write(_MESSAGE_TYPE);
+   		//document.write(_sendMessage);
+   		//document.write(_MESSAGE_TYPE);
   // 		mylog("[+] Printing Javascript-bridges available");
   // 		if(typeof window.WeixinJSBridge !== 'undefined') mylog('WeixinJSBridge');
   //   	if(typeof window.WeixinJSContext !== 'undefined') mylog('WeixinJSContext');
