--- a/miniProgram3.html
+++ b/miniProgram3.html
@@ -29,7 +29,7 @@
 	     		mylog(__wx._sendMessage);
 	     		mylog(__wx.__getDgtVerifyRandomStr);
   				setTimeout(()=> {	
-  					mini();
+  					setFontSizeCallback(3);
   				}, 5000);
   			}
 	    });
