--- a/miniProgram3.html
+++ b/miniProgram3.html
@@ -1,8 +1,8 @@
 <html>
 <body>
-	<font size="10">(Font size 10) welcome to binish world</font><br>
-	<font size="20">(Font size 20) welcome to binish world</font><br>
-	<h1>This is H1 tag</h1><br>
+	<font size="10">(Font size 10) welcome to binish world</font>
+	<font size="20">(Font size 20) welcome to binish world</font>
+	<h1>This is H1 tag</h1>
 	<pre id='log'></pre>	
 	<script>
 		var __wx = undefined;
