--- a/miniProgram3.html
+++ b/miniProgram3.html
@@ -1,9 +1,9 @@
 <html>
 <body>
-	<font size="10">(Font size 10) welcome to binish world</font>
-	<font size="20">(Font size 20) welcome to binish world</font>
+	<font size=5>(Font size 5) welcome to binish world</font><br>
+	<font size=10>(Font size 10) welcome to binish world</font><br>
 	<h1>This is H1 tag</h1>
-	<pre id='log'></pre>	
+	<pre id='log'></pre>
 	<script>
 		var __wx = undefined;
 		var _callback_count = 1000;
@@ -51,8 +51,8 @@
   		}
 
 	   	window.addEventListener('load', function(event) {
-	   		mylog("document load done");
-	  		mylog("[+] Printing Javascript-bridges available");
+	   		mylog("Document load done");
+	  		mylog("Print Javascript-bridges available");
 	  		if(typeof window.WeixinJSBridge !== 'undefined') mylog('WeixinJSBridge');
 	    	if(typeof window.WeixinJSContext !== 'undefined') mylog('WeixinJSContext');
 	    	if(typeof window.xwebToNative !== 'undefined') mylog('xwebToNative');
@@ -63,6 +63,7 @@
 	    		__wx = window.__wx;
 	    		mylog('__wx');
 	    	}
+	    	mylog("Print Javascript-bridges End");
 	    
 	     	if( typeof __wx !== 'undefined' ) { 
 	     		mylog(__wx._sendMessage);
