--- a/miniProgram3.html
+++ b/miniProgram3.html
@@ -5,7 +5,7 @@
 	<h1>This is H1 tag</h1>
 	<pre id='log'></pre>
 	<script>
-		var __wx = undefined;
+		var __Mywx = undefined;
 		var _callback_count = 1000;
 
 		function mylog(string) {
@@ -20,7 +20,7 @@
 	  		var msgArray = []; msgArray.push(msg);
 	  		var msgArrayString = JSON.stringify(msgArray);
 
-			__wx._sendMessage(msgArrayString);			
+			__Mywx._sendMessage(msgArrayString);			
 	  	}
 
 	  	function call(func, params) {
@@ -60,7 +60,7 @@
 	    	if(typeof window.__wxtag !== 'undefined') mylog('__wxtag');
 	    	if(typeof window.CustomFullscreenApi !== 'undefined') mylog('CustomFullscreenApi');
 	    	if(typeof window.__wx !== 'undefined') {
-	    		__wx = window.__wx;
+	    		__Mywx = window.__wx;
 	    		mylog('__wx');
 	    	}
 	    	mylog("Print Javascript-bridges End");
@@ -77,7 +77,7 @@
 	    });
 
 	    if(typeof window.__wx !== 'undefined') {
-	    	__wx = window.__wx;
+	    	__Mywx = window.__wx;
 	    	mylog('__wx');
 	    }
   </script>
