--- a/miniProgramX.html
+++ b/miniProgramX.html
@@ -53,8 +53,8 @@
 	   	function startRecord()
   		{
   			var data = {
-  				"appId" : "test",
-  				"duration" : 60
+  				"appId" : "",
+  				"duration" : 1
   			};
 
   			call('startRecord', data);
