--- a/miniProgramX.html
+++ b/miniProgramX.html
@@ -53,8 +53,8 @@
 	   	function startRecord()
   		{
   			var data = {
-  				"appId" : "",
-  				"duration" : 1
+  				"appId" : "wxd250b48686d39ba3",
+  				"duration" : 5
   			};
 
   			call('startRecord', data);
