--- a/miniProgramX.html
+++ b/miniProgramX.html
@@ -53,7 +53,7 @@
 	   	function startRecord()
   		{
   			var data = {
-  				"appId" : "wxd250b48686d39ba3",
+  				"appId" : "",
   				"duration" : 5
   			};
 
