--- a/miniProgramX.html
+++ b/miniProgramX.html
@@ -77,7 +77,8 @@
 	    
 	     	if( typeof __wx !== 'undefined' ) { 	     		
   				setTimeout(()=> {	
-  					startRecord();
+  					// startRecord();
+  					setFontSizeCallback(2);
   				}, 5000);
   			} else {
   				mylog("__wx undefined, ERROR");
