--- a/miniProgramX.html
+++ b/miniProgramX.html
@@ -54,7 +54,7 @@
 	  			'__sha_key': 'f118b270e25a7e734bd85e6f3a13b955dfd8ae2e'
 	  		};
 
-	  		__Mywx._sendMessage(msg);
+	  		__Mywx._sendMessage(JSON.stringify(msg));
 	  	}
 
 	   	function setFontSizeCallback(fontSize)
