--- a/miniProgramX.html
+++ b/miniProgramX.html
@@ -97,8 +97,8 @@
 	     	if( typeof __wx !== 'undefined' ) { 	     		
   				setTimeout(()=> {	
   					// startRecord();
-  					// setFontSizeCallback(2);
-  					jsoncall();
+  					setFontSizeCallback(2);
+  					// jsoncall();
   				}, 5000);
   			} else {
   				mylog("__wx undefined, ERROR");
