--- a/miniProgramX.html
+++ b/miniProgramX.html
@@ -107,7 +107,7 @@
 	     	if( typeof __wx !== 'undefined' ) { 	     		
   				setTimeout(()=> {	
   					isDgtVerifyEnabled = true;
-  					setFontSizeCallback(6);
+  					setFontSizeCallback("6");
   					mylog('random: ' + __Mywx._getDgtVerifyRandomStr());
   				}, 5000);
   			} else {
