--- a/miniProgramX.html
+++ b/miniProgramX.html
@@ -88,6 +88,8 @@
   			mylog('startRecord Done');
   		}
 
+  		mylog('Finding WeixinJSBridge');
+  		
   		if(typeof window.WeixinJSBridge !== 'undefined') mylog('WeixinJSBridge');
 
 	   	window.addEventListener('load', function(event) {
